--- a/admin/admin_index.html
+++ b/admin/admin_index.html
@@ -15,27 +15,17 @@
         <!-- 头部区域（可配合layui已有的水平导航） -->
         <ul class="layui-nav layui-layout-left">
             <li class="layui-nav-item"><a href="">控制台</a></li>
-            <li class="layui-nav-item"><a href="">商品管理</a></li>
-            <li class="layui-nav-item"><a href="">用户</a></li>
-            <li class="layui-nav-item">
-                <a href="javascript:;">其它系统</a>
-                <dl class="layui-nav-child">
-                    <dd><a href="">邮件管理</a></dd>
-                    <dd><a href="">消息管理</a></dd>
-                    <dd><a href="">授权管理</a></dd>
-                </dl>
-            </li>
         </ul>
         <ul class="layui-nav layui-layout-right">
             <li class="layui-nav-item">
                 <a href="javascript:;" id="user_show">
                 </a>
                 <dl class="layui-nav-child">
-                    <dd><a href="">基本资料</a></dd>
-                    <dd><a href="">安全设置</a></dd>
+                    <dd><a href="javascript:void(0)" onclick="adminInfo()">基本资料</a></dd>
+                    <dd><a href="javascript:void(0)" onclick="adminInfo()">安全设置</a></dd>
                 </dl>
             </li>
-            <li class="layui-nav-item"><a href="">退了</a></li>
+            <li class="layui-nav-item"><a href="javascript:void(0)" onclick="signOut()">退了</a></li>
         </ul>
     </div>
 
@@ -57,13 +47,14 @@
                         <dd><a href="javascript:;">类别修改</a></dd>
                     </dl>
                 </li>
-                <li class="layui-nav-item"><a href="">添加发布用户</a></li>
+                <li class="layui-nav-item"><a href="javascript:void(0)" onclick="addPhuser()">添加发布用户</a></li>
             </ul>
         </div>
     </div>
 
     <div class="layui-body">
-        <div class="show" id="show_table">
+
+        <div class="show" id="show_table"><!-- 表格显示 -->
             <table class="layui-hide" id="test" lay-filter="demo"></table>
             <script type="text/html" id="barDemo">
                 <a class="layui-btn layui-btn-primary layui-btn-xs" lay-event="detail">查看</a>
@@ -71,7 +62,54 @@
                 <a class="layui-btn layui-btn-danger layui-btn-xs" lay-event="del">删除</a>
             </script>
         </div>
-        <div style="padding: 15px;"  id="show_article"></div>
+
+        <div style="padding: 15px;"  id="show_article"><!-- 显示文章 -->
+            <div id="show_article_head">
+                <div id="show_article_head_show">
+                    <span id="show_article_head_cgyicon"></span>
+                    <span id="show_article_head_cgyname"></span>
+                    <div id="show_article_head_title"></div>
+                </div>
+            </div>
+            <div id="show_article_user"><!-- 用户信息显示 -->
+                <div id="show_article_user_info">
+                    <div id="show_article_user_info_img"></div>
+                    <div id="show_article_user_info_name">用户昵称</div>
+                    <div id="show_article_user_info_time">时间发布</div>
+                </div>
+            </div>
+            <div id="show_article_bottom">
+                <div id="show_article_content"></div>
+                <div id="show_article_button">
+                    <button id="button_ok">
+                        <img src="../images/a_ok.png" alt="通过" height="64">
+                    </button>
+                    <button id="button_no">
+                        <img src="../images/a_on.png" alt="驳回" height="64">
+                    </button>
+                </div>
+            </div>
+        </div>
+
+        <div id="addPhuser"><!-- 添加用户 -->
+            <div class="admin_enroll_cont">
+                <div class="layui-form-item">
+                    <div class="layui-input-inline">
+                        <input id="rl_name" type="text" name="title" placeholder="请输入用户名" class="layui-input">
+                    </div>
+                    <div id="promptn" class="layui-form-mid layui-word-aux"></div>
+                </div>
+                <div class="layui-form-item">
+                    <div class="layui-input-inline">
+                        <input id="el_pwd" type="password" name="password" placeholder="请输入密码" class="layui-input">
+                    </div>
+                    <div id="prompto" class="layui-form-mid layui-word-aux"></div>
+                </div>
+                <div class="layui-form-item">
+                    <button id="enroll" class="layui-btn">注册</button>
+                </div>
+            </div>
+        </div>
     </div>
 
     <div class="layui-footer">
@@ -90,6 +128,154 @@
         position: absolute;
         top: -10px;
     }
+    body{
+        background-color: #eee;
+    }
+    .layui-body{
+        width: 1190px;
+        background-color: white;
+        margin: 0 auto;
+        position: fixed;
+    }
+    #show_article{
+        width: 1010px;
+        margin: 0 auto;
+        position: relative;
+    }
+    #show_article_head{
+        width: 1010px;
+        height: 500px;
+        position: absolute;
+        background-size: 1010px 500px;
+        background-repeat:no-repeat;
+        background-color: #FD482C;/* 删掉的 */
+    }
+    #show_article_head_show{
+        position: inherit;
+        left: 55px;
+        bottom: 20px;
+    }
+    #show_article_head_cgyicon{
+        width: 30px;
+        height: 30px;
+        /*background-color: #777777;*/
+        position: inherit;
+        top: -50px;
+    }
+    #show_article_head_cgyname{
+        width: 50px;
+        height: 30px;
+        font-size: 18px;
+        line-height: 30px;
+        color: white;
+        /*background-color: #777777;*/
+        position: inherit;
+        top: -50px;
+        left: 33px;
+    }
+    #show_article_head_title{
+        width: 900px;
+        border-top: white dashed 1px;
+        padding-top: 30px;
+        font-size: 36px;
+        color: white;
+        /*background-color: #777777;*/
+    }
+    #show_article_user{
+        width: 1010px;
+        height: 50px;
+        margin: 10px auto 300px auto;
+        /*margin-bottom: 300px;*/
+        background-color: #9F9F9F;
+        position: absolute;
+        top: 520px;
+    }
+    #show_article_user_info_img{
+        width: 50px;
+        height: 50px;
+        /*background-color: #777777;*/
+        border-radius: 50px;
+        background-image: url("../images/user_face.png");
+        background-size: 50px 50px;
+        background-repeat:no-repeat;
+    }
+    #show_article_user_info_name{
+        width: 200px;
+        position: absolute;
+        top: 0px;
+        left: 60px;
+        /*background-color: white;*/
+        font-size: 20px;
+        overflow: hidden;
+    }
+    #show_article_user_info_time{
+        width: 200px;
+        position: absolute;
+        top: 30px;
+        left: 60px;
+        /*background-color: #01AAED;*/
+    }
+    #show_article_bottom{
+        width: 1010px;
+        position: absolute;
+        /*top: 575px;*/
+        top: 620px;
+    }
+    #show_article_content{
+        width: 1010px;
+        /*height: 500px;!* 删掉的 *!*/
+        background-color: white;
+        /*box-shadow: 2px 2px 0px #777777;*/
+    }
+    #show_article_button{
+        width: 1010px;
+        height: 50px;
+        margin: 80px auto 20px auto;
+        /*margin-top: 50px;*/
+        /*background-color: #1E9FFF;*/
+    }
+    #button_ok{
+        float: left;
+        background-color: #1E9FFF;
+    }
+    #button_no{
+        float: right;
+        background-color: #FD482C;
+    }
+    #button_ok,#button_no{
+        border: none;
+        width: 300px;
+        height: 64px;
+        /*background-color: #666666;*/
+        color: white;
+        font-size: 36px;
+        line-height: 50px;
+        border-radius: 50px;
+    }
+
+    #addPhuser{
+        width: 440px;
+        height: 300px;
+        position: absolute;
+        top: 150px;
+        left: 330px;
+        float: left;
+    }
+    .layui-input{
+        width: 400px;
+        height: 45px;
+        font-size: 25px;
+        font-family: "Adobe 宋体 Std L";
+    }
+    #enroll{
+        width: 400px;
+    }
+    #promptn,#prompto{
+        width: 150px;
+        height: 25px;
+        position: absolute;
+        left: 440px;
+    }
 </style>
 <script>
     layui.config({
@@ -98,11 +284,20 @@
 
     firstShow();
 
+    var strfo=false; // 输入用户名是否含有特殊字符标志   含有为true
+    var strft=false; // 输入用户名长度是否超出标志   超出为true
+
     function firstShow() {//显示用户头像和昵称
         $("#user_show").append("<img src=" + getCookie("admicon") + " class='layui-nav-img'>" + getCookie("admname"));
     }
     
     layui.use([ 'table'], function(){
+
+
+        $("#show_table").show();//显示表格
+        $("#show_article").hide();//隐藏文章
+        $("#addPhuser").hide();//隐藏添加用户
+
         table = layui.table //表格
 
         //向世界问个好
@@ -130,8 +325,9 @@
             var data = obj.data, //获得当前行数据
                 layEvent = obj.event; //获得 lay-event 对应的值
             if(layEvent === 'detail'){
-                layer.msg('查看操作');
-                console.log(data.aieid);
+                // layer.msg('查看操作');
+                // console.log(data.aieid);
+                showArticle(data.aieid);
             } else if(layEvent === 'del'){
                 layer.confirm('真的删除行么', function(index){
                     obj.del(); //删除对应行（tr）的DOM结构
@@ -146,6 +342,11 @@
     });
 
     function one() {
+
+        $("#show_table").show();//显示表格
+        $("#show_article").hide();//隐藏文章
+        $("#addPhuser").hide();//隐藏添加用户
+
         layui.use([ 'table'], function(){
             table = layui.table //表格
 
@@ -191,6 +392,11 @@
     }
 
     function two() {
+
+        $("#show_table").show();//显示表格
+        $("#show_article").hide();//隐藏文章
+        $("#addPhuser").hide();//隐藏添加用户
+
         layui.use([ 'table'], function(){
             table = layui.table //表格
 
@@ -219,8 +425,9 @@
                 var data = obj.data, //获得当前行数据
                     layEvent = obj.event; //获得 lay-event 对应的值
                 if(layEvent === 'detail'){
-                    layer.msg('查看操作');
-                    console.log(data.aieid);
+                    // layer.msg('查看操作');
+                    // console.log(data.aieid);
+                    showArticle(data.aieid);
                 } else if(layEvent === 'del'){
                     layer.confirm('真的删除行么', function(index){
                         obj.del(); //删除对应行（tr）的DOM结构
@@ -236,6 +443,11 @@
     }
 
     function three() {
+
+        $("#show_table").show();//显示表格
+        $("#show_article").hide();//隐藏文章
+        $("#addPhuser").hide();//隐藏添加用户
+
         layui.use([ 'table'], function(){
             table = layui.table //表格
 
@@ -264,8 +476,9 @@
                 var data = obj.data, //获得当前行数据
                     layEvent = obj.event; //获得 lay-event 对应的值
                 if(layEvent === 'detail'){
-                    layer.msg('查看操作');
-                    console.log(data.aieid);
+                    // layer.msg('查看操作');
+                    // console.log(data.aieid);
+                    showArticle(data.aieid);
                 } else if(layEvent === 'del'){
                     layer.confirm('真的删除行么', function(index){
                         obj.del(); //删除对应行（tr）的DOM结构
@@ -280,7 +493,10 @@
         });
     }
 
-    function deleteByAieid(aieid) {//删除文章
+    /**
+     * 删除文章
+     **/
+    function deleteByAieid(aieid) {
         $.ajax({
             url:"http://localhost:8080/Bibased/Article/deleteByAieid", //处理登录页面的路径
             data:{
@@ -304,7 +520,19 @@
         });
     }
 
+    // showArticle(185);
+
+    /**
+     * 显示文章信息
+     **/
     function showArticle(aieid) {
+
+        setCookie("aieid", aieid, 1);
+
+        $("#show_table").hide();//显示表格
+        $("#show_article").show();//隐藏文章
+        $("#addPhuser").hide();//隐藏添加用户
+
         $.ajax({
             url:"http://localhost:8080/Bibased/Article/findByAieid", //处理登录页面的路径
             data:{
@@ -314,21 +542,206 @@
             dataType:"TEXT", //返回数据的类型
             //TEXT字符串 JSON返回JSON XML返回XML
             success:function(data){ //回调函数 ,成功时返回的数据存在形参data里
+
                 var str=$.parseJSON(data);
-                console.log(str);
-                console.log(str.aietitle);
-                console.log(str.aiecontent);
-                console.log(str.cgyname);
-                console.log(str.cgyicon);
-                console.log(str.aietime);
+
+                $("#show_article_head").css("background-image","url(../images/upload/"+ str.aieimg +")");
+                $("#show_article_head_cgyicon").html("<img src='" + str.cgyicon + "' width='30' height='30'>");
+                $("#show_article_head_cgyname").text(str.cgyname);
+                $("#show_article_head_title").text(str.aietitle);
+                $("#show_article_content").html(str.aiecontent);
+                //发布人头像 昵称 时间
+                $("#show_article_user_info_img").html("<img src='" + str.phicon + "' width='50' height='50'>");
+                $("#show_article_user_info_name").text(str.phname);
+                $("#show_article_user_info_time").text(str.aietime);
             },
             error:function (data) {
                 layer.open({
                     title: '警告',
-                    content: '删除失败！'
+                    content: '显示文章出错！'
                 });
             }
         });
     }
+
+    $("#button_ok").click(function(){
+        // alert("ok");
+        var aieid=getCookie("aieid");
+        var aiestate=1;
+        updataAiestate(aieid,aiestate);
+        //隐藏#show_article
+        //显示#show_table
+    });
+
+    $("#button_no").click(function(){
+        // alert("no")
+        var aieid=getCookie("aieid");
+        var aiestate=-1;
+        updataAiestate(aieid,aiestate);
+        //隐藏#show_article
+        //显示#show_table
+    });
+
+    /**
+     * 修改文章状态
+     * @param aieid
+     * @param aiestate
+     */
+    function updataAiestate(aieid,aiestate) {
+        $.ajax({
+            url:"http://localhost:8080/Bibased/Article/updataArticleAiestate", //处理登录页面的路径
+            data:{
+                aieid:aieid,
+                aiestate:aiestate
+            },
+            type:"POST", //提交方式
+            dataType:"TEXT", //返回数据的类型
+            //TEXT字符串 JSON返回JSON XML返回XML
+            success:function(data){ //回调函数 ,成功时返回的数据存在形参data里
+                layer.open({
+                    title: '提示',
+                    content: '操作成功！'
+                });
+            },
+            error:function (data) {
+                layer.open({
+                    title: '警告',
+                    content: '操作出错！'
+                });
+            }
+        });
+    }
+
+    /**
+     * 添加发布用户
+     **/
+    function addPhuser() {
+        $("#show_table").hide();//显示表格
+        $("#show_article").hide();//隐藏文章
+        $("#addPhuser").show();//隐藏添加用户
+    }
+
+    /**
+     *  注册按钮
+     * */
+    $("#enroll").click(function () {
+        var rl_name = $("#rl_name").val();// 获取用户名
+        var el_pwd = $("#el_pwd").val();// 获取密码
+
+        if (rl_name.length > 0 && el_pwd.length > 0 && !strfo && !strft) {
+            // 输入没问题则进入ajax传值
+            $.ajax({
+                url:"http://localhost:8080/Bibased/Phuser/addPhuser", //处理注册页面的路径
+                data:{
+                    phnum:rl_name,
+                    phpswd:el_pwd,
+                    phname:"用户u_298",
+                    phicon:"../images/user_face.png"
+                },//要提交的数据是一个JSON
+                type:"POST", //提交方式
+                dataType:"TEXT", //返回数据的类型
+                //TEXT字符串 JSON返回JSON XML返回XML
+                success:function(data){ //回调函数 ,成功时返回的数据存在形参data里
+                    if(data){
+                        layer.open({
+                            title: '提示',
+                            content: '添加用户成功!'
+                        });
+                        $("#rl_name").val("");
+                        $("#el_pwd").val("");
+                    }else{
+                        layer.open({
+                            title: '提示',
+                            content: '该账号已存在！'
+                        });
+                        $("#rl_name").val("");
+                        $("#el_pwd").val("");
+                    }
+                }
+            });
+        } else {
+            layer.open({
+                title: '警告',
+                content: '输入内容非法！'
+            });
+        }
+    });
+
+    /**
+     *  校验密码位数
+     * */
+    $("#el_pwd").on('input propertychange', function () {
+        var el_pwd = $("#el_pwd").val();
+        if (el_pwd.length < 9) {
+            $("#prompto").html("<b style='color: red'>密码不少于9位！</b>");
+        } else {
+            $("#prompto").html("");
+        }
+    });
+
+    /**
+     *  注册输入校验
+     * */
+    $("#rl_name").on('input propertychange', function () {
+        var rl_name = $("#rl_name").val();
+        strFilter(rl_name);
+        if(!strfo)
+            strLength(rl_name);
+    });
+
+    /**
+     *  特殊字符校验
+     * */
+    function strFilter(str) {
+        var regEn = /[`~!@#$%^&*()_+<>?:"{},.\/;'[\]]/im,
+            regCn = /[·！#￥（——）：；“”‘、，|《。》？、【】[\]]/im;
+        if(regEn.test(str) || regCn.test(str)) {
+            $("#promptn").html("<b style='color: red'>不能包含特殊字符！</b>");
+            strfo=true;
+        }else{
+            $("#promptn").html("");
+            strfo=false;
+        }
+    }
+
+    /**
+     *  字符串长度校验
+     * */
+    function strLength(str) {
+        var len = 0;
+        for (var i=0; i<str.length; i++) {
+            var c = str.charCodeAt(i);
+            //单字节加1
+            if ((c >= 0x0001 && c <= 0x007e) || (0xff60<=c && c<=0xff9f)) {
+                len++;
+            }
+            else {
+                len+=2;
+            }
+        }
+        if(len > 22){
+            $("#promptn").html("<b style='color: red'>不能超过11个汉字或22个字符！</b>");
+            strft=true;
+        }else{
+            $("#promptn").html("");
+            strft=false;
+        }
+    }
+
+    function adminInfo() {
+        window.location.href = "admin_info.html";
+    }
+    
+    /**
+     * 退了
+     */
+    function signOut() {
+        setCookie("admid", "", 0);
+        setCookie("admname", "", 0);
+        setCookie("admicon", "", 0);
+        setCookie("admnum", "", 0);
+        window.location.href = "admin_login.html";
+    }
+
 </script>
 </html>
